<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main3Activity"
    android:padding = "16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint = "@string/sahm"
            android:id="@+id/sahm"
            android:layout_margin="10dp"
            android:inputType="numberDecimal"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/karat"
            android:id="@+id/karat"
            android:layout_margin="10dp"
            android:inputType="numberDecimal"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fadan"
            android:id="@+id/fadan"
            android:layout_margin="10dp"
            android:inputType="numberDecimal"/>


        <Button
            android:layout_width="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_height="wrap_content"
            android:text = "@string/calc"
            android:onClick="calcul"/>

        <Button
            android:layout_width="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_height="wrap_content"
            android:text = "@string/clear"
            android:layout_marginTop="10dp"
            android:onClick="clear"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:paddingTop="20dp"
            android:id = "@+id/showInfo"
            />


    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright_mahmoud_mousa"
        android:gravity="bottom"
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"/>




</RelativeLayout>